--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.url=jdbc\:postgresql\://localhost\:5432/expense_project
+spring.datasource.url=jdbc\:postgresql\://172.17.40.34\:5432/expense_project
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 logging.level: DEBUG
